# flow-doc

./: .gitignore  README.md  prompts_used.md  pyproject.toml  requirements.txt  run_api.py
.github/workflows/: test.yml
docs/: ARCHITECTURE.md
docs_output/: hello.md
flow_sample_codebase/: README.md  app.py
flow_sample_codebase/models/: __init__.py  order.py  product.py  user.py
flow_sample_codebase/routes/: __init__.py  orders.py  products.py  users.py
flow_sample_codebase/services/: __init__.py  order_service.py  product_service.py  user_service.py
flow_sample_codebase/utils/: __init__.py  auth.py  database.py  validation.py
sample_codebase/: fastapi_app.py  flask_app.py
src/: __init__.py  cli.py
src/api/: __init__.py  app.py  models.py  routes.py
src/core/: __init__.py  agent.py  analyzer.py  generator.py  graph.py  memory.py  parser.py  pattern_detector.py  vectorstore.py  visualizer.py
tests/: __init__.py  conftest.py  test_agent.py  test_agent_nodes.py  test_agent_workflow.py  test_analyzer.py  test_api.py  test_cli.py  test_generator.py  test_generator_unit.py  test_incremental.py  test_memory.py  test_memory_unit.py  test_parser.py  test_pattern_detector.py  test_vectorstore.py  test_visualizer.py
